2014-01-16  Alexey Proskuryakov  <ap@apple.com>

        [Mac] [iOS] Add support for CFHTTPCookieStorageAcceptPolicyExclusivelyFromMainDocumentDomain
        https://bugs.webkit.org/show_bug.cgi?id=127139

        Reviewed by Brady Eidson.

        * WebView/WebPreferences.mm: (-[WebPreferences _synchronizeWebStoragePolicyWithCookiePolicy]):
        Handle the new case.

2014-01-16  Daniel Bates  <dabates@apple.com>

        [iOS] Fix UIKit build warning about undefined macro ENABLE_NETSCAPE_PLUGIN_API

        * WebView/WebFramePrivate.h: Wrap use of ENABLE_NETSCAPE_PLUGIN_API in TARGET_OS_IPHONE.

2014-01-16  Anders Carlsson  <andersca@apple.com>

        Change all uses of FINAL to final now that all our compilers support it
        https://bugs.webkit.org/show_bug.cgi?id=127142

        Reviewed by Benjamin Poulain.

        * WebCoreSupport/WebUserMediaClient.h:
        * WebView/WebScriptDebugger.h:

2014-01-16  Peter Molnar  <pmolnar.u-szeged@partner.samsung.com>

        Remove workaround for compilers not supporting explicit override control
        https://bugs.webkit.org/show_bug.cgi?id=127111

        Reviewed by Anders Carlsson.

        Now all compilers support explicit override control, this workaround can be removed.

        * Storage/WebDatabaseManagerClient.h:
        * Storage/WebStorageTrackerClient.h:
        * WebCoreSupport/WebAlternativeTextClient.h:
        * WebCoreSupport/WebChromeClient.h:
        * WebCoreSupport/WebContextMenuClient.h:
        * WebCoreSupport/WebDeviceOrientationClient.h:
        * WebCoreSupport/WebDragClient.h:
        * WebCoreSupport/WebEditorClient.h:
        * WebCoreSupport/WebFrameLoaderClient.h:
        * WebCoreSupport/WebFrameNetworkingContext.h:
        * WebCoreSupport/WebGeolocationClient.h:
        * WebCoreSupport/WebIconDatabaseClient.h:
        * WebCoreSupport/WebInspectorClient.h:
        * WebCoreSupport/WebNotificationClient.h:
        * WebCoreSupport/WebPlatformStrategies.h: